<resources>
    <string name="app_name">ShopIST</string>

    <!-- Products -->
    <string name="create_product_item_name"> Product name </string>
    <string name="create_product_title"> Insert new product </string>
    <string name="create_product_stores_title"> Choose stores to buy in </string>
    <string name="create_product_item_complete"> Add new Product </string>
    <string name="edit_product">Edit Product</string>
    <string name="edit_product_save">Save Product</string>
    <string name="product_name">Product Name</string>
    <string name="product">Product</string>
    <string name="product_scan_barcode">Scan Barcode</string>
    <string name="product_add_price">Add Price</string>
    <string name="product_see_prices">See Prices by Store</string>
    <string name="price_above_zero">Type a price above 0.</string>
    <string name="barcode_value">Barcode: %s</string>
    <string name="share_product_message">Hi! Here\'s the link for the product \"%s\":%n %s</string>
    <string name="share_product_message_in_store">Hi! Here\'s the link for the product \"%s\" found in the store \"%s\":%n %s</string>
    <string name="cannot_get_product">Cannot get product.</string>
    <string name="confirm_product_delete">Confirm Delete Product</string>
    <string name="product_add_barcode">Insert Barcode</string>
    <string name="barcode_not_empty">The barcode value must not be empty.</string>

    <!-- Pantry Items -->
    <string name="create_pantry_item_title"> Title </string>
    <string name="add_item_title"> Add new item </string>
    <string name="add_item_quantity"> Item quantity </string>
    <string name="add_item_quantity_title">Change Item Quantity</string>
    <string name="add_item_quantity_hint">Value greater than or equal to 0</string>
    <string name="add_item_button"> Insert new item </string>
    <string name="product_needed">First select a product.</string>
    <string name="quantity_equal_or_above_zero">Select a quantity equal or above 0.</string>
    <string name="product_already_in_pantry">This product is already in your pantry list.</string>
    <string name="confirm_pantry_item_delete">Confirm Delete Pantry Item</string>

    <!-- Pantry Lists -->
    <string name="new_pantry">New Pantry</string>
    <string name="create_pantry_title"> Insert your new pantry\'s data </string>
    <string name="create_pantry_warning"> This new pantry will be added to the family pantry </string>
    <string name="create_pantry_item_complete"> Add new Pantry </string>
    <string name="pantry_list_name">Pantry List Name</string>
    <string name="edit_pantry"> Edit Pantry </string>
    <string name="edit_pantry_complete">Save Pantry</string>
    <string name="cannot_get_pantry">Cannot get pantry list.</string>
    <string name="unable_open_pantry">Unable to open pantry from URI.</string>
    <string name="unable_delete_pantry">Unable to delete pantry.</string>
    <string name="share_pantry_message">Hi! Here\'s the link for our pantry list \"%s\":%n %s</string>
    <string name="cant_edit_pantry">Can\'t edit the pantry without internet access.</string>
    <string name="confirm_pantry_delete">Confirm Delete Pantry</string>

    <!-- Shopping Lists -->
    <string name="create_shopping_title"> Add new Shopping List </string>
    <string name="create_shopping_complete"> Add new Store </string>
    <string name="edit_shopping"> Edit Store </string>
    <string name="edit_shopping_complete"> Save Store </string>
    <string name="new_shopping_list">New Shopping List</string>
    <string name="shopping_default_store">Set as default store for products</string>
    <string name="checkout">Checkout</string>
    <string name="confirm_checkout">Confirm Checkout</string>
    <string name="checkout_complete">Checkout complete!</string>
    <string name="confirm_shopping_item_delete">Confirm Delete Shopping List Item</string>
    <string name="confirm_store_delete">Confirm Delete Store</string>

    <!-- Navigation -->
    <string name="pantries_list">My Pantries</string>
    <string name="shopping_lists_title">Shopping Lists</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_side_menu_navigation">SideMenuNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ShopISTa</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- User Prompt -->
    <string name="user_prompt_title">Help improve the app!</string>
    <string name="user_prompt_accept">Help now</string>
    <string name="user_prompt_cancel">No thanks</string>
    <string name="user_prompt_stop_remembering">Don\'t ask again</string>
    <string name="user_prompt_on_barcode">Contribute to the app by adding prices, images or ratings!</string>
    <string name="user_prompt_on_cart">Contribute to the app by adding a barcode to this product!</string>

    <!-- Global -->
    <string name="location_not_set"> Location not set </string>
    <string name="location_set"> Location set! </string>
    <string name="choose_location">Choose location</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="error_loading_file">Error loading application data</string>
    <string name="server_security_error">Can\'t connect to server due to unsafe connection</string>
    <string name="error_getting_link">Error getting link.</string>
    <string name="save">Save</string>

    <!-- Images -->
    <string name="add_new_photo">Add new photo</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>

    <!-- Others -->
    <string name="title_activity_test">Test</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="barcode_read">Barcode read: %1$s.</string>
    <string name="product_barcode_read">Product found: %1$s.</string>
    <string name="price">Price (i.e.: 1.23)</string>
    <string name="choose_store">Choose a store</string>
    <string name="first_choose_store">First you need to choose a store</string>
    <string name="prices_by_stores">Prices by Store</string>
    <string name="not_available">None</string>

    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_see_more">See more</string>
    <string name="action_share">Share</string>
    <string name="create_pantry">Create Pantry</string>
    <string name="edit_product_title">Edit product</string>
    <string name="get_directions">Get Directions</string>
    <string name="add">add</string>
    <string name="list_name">Name</string>
    <string name="no_ratings">No ratings yet!</string>
    <string name="add_rating_dialog">Add Product Rating</string>

    <string name="connect_to_the_internet_and_add_or_add_a_barcode_to_access_user_ratings">Connect to the internet and add/or add a barcode to access user ratings</string>

    <!-- Util -->
    <string name="my_lang" translatable="false">my_lang</string>
    <string name="my_preference" translatable="false">my_preference</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_full_screen">Image</string>
    <string name="nav_header_subtitle">everybody@home.dance</string>
    <string name="deleteLocation">delete Location</string>
    <string name="choose_new_location">Choose new location</string>
    <string name="remove_rating">Remove Rating</string>
    <string name="total">Total</string>
    <string name="no_such_product_with_barcode">No such product with barcode %s found in %s</string>

    <string name="total_price">Price:</string>
    <string name="product_add_price_one_store">Add price</string>
    <string name="change_price">Change Price</string>
</resources>