<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_selected"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_selected"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="ifRoom"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_see_more"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="never"
        android:title="@string/action_see_more" />
    <item
        android:id="@+id/action_edit_current"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="never"
        android:title="@string/action_edit" />
    <item
        android:id="@+id/action_delete_current"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="never"
        android:title="@string/action_delete" />
</menu>