<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePantryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:gravity="center_horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_marginTop="40dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_pantry_title"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/editTextPantryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/create_pantry_item_title"/>

            <Button
                android:id="@+id/createProductButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_pantry_item_complete"
                android:onClick="onCreatePantry"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_pantry_warning"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>