<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:baselineAligned="false" android:gravity="center_horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_marginTop="40dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_product_title"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/create_product_item_name"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/storesListTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_product_stores_title"
                android:layout_marginBottom="20dp" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/storesList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>
            </ScrollView>

            <Button
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_product_item_complete"
                android:onClick="onCreateProduct"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>